Add more recipes and pictures

--- a/recipes/parmesan-orzo.html
+++ b/recipes/parmesan-orzo.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Parmesan Basil Orzo</h1>
 
-    <!-- introduction to the recipe (need to replace with my own text)-->
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos, adipisci iste alias ut quos dolor sequi, mollitia ea odio architecto veritatis reprehenderit corporis commodi eaque porro obcaecati at, autem vel.</p>
-
     <img src="../images/parmesan-orzo.png" alt="a bowl of parmesan and basil orzo pasta" width="400">
+
+    <h2>Description</h2>
+    <p>This light and flavorful orzo dish features tender pasta tossed with grated Parmesan cheese and fresh basil. It’s a simple yet elegant side that pairs beautifully with a variety of mains, offering a creamy texture and a burst of herbaceous freshness in every bite.</p>
 
     <h2>Ingredients</h2>
     <ul>
