--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <h1>Odin Recipes</h1>
 
     <!-- link to recipe pages -->
-     <a href="./recipes/parmesan-orzo.html">Parmesan Basil Orzo</a>
+     <ul>
+        <li>
+            <a href="./recipes/parmesan-orzo.html">Parmesan Basil Orzo</a>
+        </li>
+        <li>
+            <a href="./recipes/meatloaf.html">Turkey Meatloaf with Zucchini and Feta</a>
+        </li>
+        <li>
+            <a href="./recipes/quinoa.html">Creamy Quinoa</a>
+        </li>
+     </ul>
+     
 </body>
 </html>
