Add more semantic HTML to index and recipe pages

--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turkey Meatloaf with Zucchini and Feta</title>
+    <link rel="stylesheet" href="../assets/styles.css">
 </head>
 <body>
+    <header>
+        <h1>Odin Recipes</h1>
+        <hr>
+    </header>
+
     <h1>Turkey Meatloaf with Zucchini and Feta</h1>
 
     <img src="../images/meatloaf.png" alt="turkey meatloaf sliced on a tray" width="400">
