--- a/recipes/parmesan-orzo.html
+++ b/recipes/parmesan-orzo.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parmesan Orzo</title>
+    <link rel="stylesheet" href="../assets/styles.css">
 </head>
 <body>
+    <header>
+        <h1>Odin Recipes</h1>
+        <hr>
+    </header>
+
     <h1>Parmesan Basil Orzo</h1>
 
     <img src="../images/parmesan-orzo.png" alt="a bowl of parmesan and basil orzo pasta" width="400">
