--- a/recipes/quinoa.html
+++ b/recipes/quinoa.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creamy Quinoa</title>
+    <link rel="stylesheet" href="../assets/styles.css">
 </head>
 <body>
+    <header>
+        <h1>Odin Recipes</h1>
+        <hr>
+    </header>
+
     <h1>Creamy Quinoa</h1>
 
     <img src="../images/quinoa.png" alt="bowl with creamy quinoa inside" width="400">
