--- a/index.html
+++ b/index.html
@@ -4,22 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./assets/styles.css">
+
+    <!-- embed for Google font -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Odin Recipes</h1>
+    <header>
+        <h1>Odin Recipes</h1>
+        <hr>
+    </header>
+    
 
     <!-- link to recipe pages -->
-     <ul>
-        <li>
-            <a href="./recipes/parmesan-orzo.html">Parmesan Basil Orzo</a>
-        </li>
-        <li>
-            <a href="./recipes/meatloaf.html">Turkey Meatloaf with Zucchini and Feta</a>
-        </li>
-        <li>
-            <a href="./recipes/quinoa.html">Creamy Quinoa</a>
-        </li>
-     </ul>
+    <section class="table-of-contents">
+        <ul>
+            <li>
+                <a href="./recipes/parmesan-orzo.html">Parmesan Basil Orzo</a>
+            </li>
+            <li>
+                <a href="./recipes/meatloaf.html">Turkey Meatloaf with Zucchini and Feta</a>
+            </li>
+            <li>
+                <a href="./recipes/quinoa.html">Creamy Quinoa</a>
+            </li>
+        </ul>
+    </section>
      
+
+     <hr>
 </body>
 </html>
