--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1>Odin Recipes</h1>
+        <h1><img src="./images/title-icon.svg" id="title-icon">Good Dinner Dear</h1>
         <hr>
     </header>
     
