--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -8,48 +8,55 @@
 </head>
 <body>
     <header>
-        <h1>Odin Recipes</h1>
+        <h1><img src="../images/title-icon.svg" id="title-icon">Good Dinner Dear</h1>
         <hr>
     </header>
+    <section class="recipe-block">
 
-    <h1>Turkey Meatloaf with Zucchini and Feta</h1>
+        <h1 class="recipe-heading">Turkey Meatloaf with Zucchini and Feta</h1>
 
-    <img src="../images/meatloaf.png" alt="turkey meatloaf sliced on a tray" width="400">
-   
-    <h2>Description</h2>
-    <p>This savory meatloaf is a flavorful twist on a classic, blending ground meat with shredded zucchini for added moisture and a boost of veggies. Crumbled feta cheese adds a tangy richness throughout, creating a perfectly balanced and hearty dish that's both comforting and nutritious.</p>
+        <img src="../images/meatloaf.png" alt="turkey meatloaf sliced on a tray" width="400">
+    
+        <h2 class="recipe-heading">Description</h2>
+        <p>This savory meatloaf is a flavorful twist on a classic, blending ground meat with shredded zucchini for added moisture and a boost of veggies. Crumbled feta cheese adds a tangy richness throughout, creating a perfectly balanced and hearty dish that's both comforting and nutritious.</p>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1/4 cup breadcrumbs</li>
-        <li>1/8 cup milk</li>
-        <li>1 lb. ground turkey</li>
-        <li>1 beaten egg</li>
-        <li>1 t onion powder</li>
-        <li>1 t garlic powder</li>
-        <li>1/2 t salt</li>
-        <li>1/2 t pepper</li>
-        <li>1/2 t italian seasoning</li>
-        <li>1/2 T Worcestershire sauce</li>
-        <li>1/2 cup feta</li>
-        <li>1 cup shredded zucchni, water squeezed out</li>
-        <li>1/2 cup marinara sauce, divided</li>
-    </ul>
+        <h2 class="recipe-heading">Ingredients</h2>
+        <ul>
+            <li>1/4 cup breadcrumbs</li>
+            <li>1/8 cup milk</li>
+            <li>1 lb. ground turkey</li>
+            <li>1 beaten egg</li>
+            <li>1 t onion powder</li>
+            <li>1 t garlic powder</li>
+            <li>1/2 t salt</li>
+            <li>1/2 t pepper</li>
+            <li>1/2 t italian seasoning</li>
+            <li>1/2 T Worcestershire sauce</li>
+            <li>1/2 cup feta</li>
+            <li>1 cup shredded zucchni, water squeezed out</li>
+            <li>1/2 cup marinara sauce, divided</li>
+        </ul>
 
-    <h2>Directions</h2>
-    <ol>
-        <li>Preheat oven to 350 degrees.</li>
-        <li>In a large bowl, mix together the milk and breadcrumbs until it forms a paste.</li>
-        <li>Add in the ground turkey, egg, seasonings, Worcestershire sauce, feta cheese, zucchini and 1/4 cup of the marinara.</li>
-        <li>Mix until all the ingredients are combined.</li>
-        <li>Place on a baking pan sprayed with cooking spray and form into a loaf.</li>
-        <li>Spread the last 1/4 cup of marinara sauce over the top.</li>
-        <li>Cook for 1 hour and 15 minutes.</li>
-        <li>Let sit for 5 minutes before serving.</li>
-    </ol>
-
-    <!-- link back to home page -->
-    <a href="../index.html">Home</a>
+        <h2 class="recipe-heading">Directions</h2>
+        <ol>
+            <li>Preheat oven to 350 degrees.</li>
+            <li>In a large bowl, mix together the milk and breadcrumbs until it forms a paste.</li>
+            <li>Add in the ground turkey, egg, seasonings, Worcestershire sauce, feta cheese, zucchini and 1/4 cup of the marinara.</li>
+            <li>Mix until all the ingredients are combined.</li>
+            <li>Place on a baking pan sprayed with cooking spray and form into a loaf.</li>
+            <li>Spread the last 1/4 cup of marinara sauce over the top.</li>
+            <li>Cook for 1 hour and 15 minutes.</li>
+            <li>Let sit for 5 minutes before serving.</li>
+        </ol>
+    </section>
+    <footer>
+        <hr>
+        <!-- link back to home page -->
+         <p>
+            <a href="../index.html">Home</a>
+         </p>
+    </footer>
+    
 
 </body>
 </html>
