--- a/recipes/parmesan-orzo.html
+++ b/recipes/parmesan-orzo.html
@@ -8,41 +8,47 @@
 </head>
 <body>
     <header>
-        <h1>Odin Recipes</h1>
+        <h1><img src="../images/title-icon.svg" id="title-icon">Good Dinner Dear</h1>
         <hr>
     </header>
+    <section class="recipe-block">
+        <h1 class="recipe-heading">Parmesan Basil Orzo</h1>
 
-    <h1>Parmesan Basil Orzo</h1>
+        <img src="../images/parmesan-orzo.png" alt="a bowl of parmesan and basil orzo pasta" width="400">
 
-    <img src="../images/parmesan-orzo.png" alt="a bowl of parmesan and basil orzo pasta" width="400">
+        <h2 class="recipe-heading">Description</h2>
+        <p>This light and flavorful orzo dish features tender pasta tossed with grated Parmesan cheese and fresh basil. It’s a simple yet elegant side that pairs beautifully with a variety of mains, offering a creamy texture and a burst of herbaceous freshness in every bite.</p>
 
-    <h2>Description</h2>
-    <p>This light and flavorful orzo dish features tender pasta tossed with grated Parmesan cheese and fresh basil. It’s a simple yet elegant side that pairs beautifully with a variety of mains, offering a creamy texture and a burst of herbaceous freshness in every bite.</p>
+        <h2 class="recipe-heading">Ingredients</h2>
+        <ul>
+            <li>2 T butter</li>
+            <li>1 1/2 cups orzo</li>
+            <li>3 cups chicken broth</li>
+            <li>1/2 t garlic powder</li>
+            <li>3/4 cup grated parmesan cheese</li>
+            <li>2 T chopped fresh basil</li>
+            <li>salt and pepper to taste</li>
+        </ul>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 T butter</li>
-        <li>1 1/2 cups orzo</li>
-        <li>3 cups chicken broth</li>
-        <li>1/2 t garlic powder</li>
-        <li>3/4 cup grated parmesan cheese</li>
-        <li>2 T chopped fresh basil</li>
-        <li>salt and pepper to taste</li>
-    </ul>
-
-    <h2>Directions</h2>
-    <ol>
-        <li>In a large skillet, combine butter and orzo.</li>
-        <li>Saut&#233; over medium heat until orzo is golden brown, stirring frequently.</li>
-        <li>Slowly stir in broth and bring to a boil.</li>
-        <li>Cover and reduce heat to low.</li>
-        <li>Simmer 20 minutes or until orzo is tender and almost all the broth has been absorbed.</li>
-        <li>Remove from the heat.</li>
-        <li>Stir in basil and parmesand cheese and salt and pepper to taste.</li>
-        <li>Enjoy!</li>
-    </ol>
-
-    <!-- link back to home page -->
-     <a href="../index.html">Home</a>
+        <h2 class="recipe-heading">Directions</h2>
+        <ol>
+            <li>In a large skillet, combine butter and orzo.</li>
+            <li>Saut&#233; over medium heat until orzo is golden brown, stirring frequently.</li>
+            <li>Slowly stir in broth and bring to a boil.</li>
+            <li>Cover and reduce heat to low.</li>
+            <li>Simmer 20 minutes or until orzo is tender and almost all the broth has been absorbed.</li>
+            <li>Remove from the heat.</li>
+            <li>Stir in basil and parmesand cheese and salt and pepper to taste.</li>
+            <li>Enjoy!</li>
+        </ol>
+    </section>
+    <footer>
+        <hr>
+        <!-- link back to home page -->
+         <p>
+            <a href="../index.html">Home</a>
+         </p>
+    </footer>
+    
 </body>
 </html>
