--- a/recipes/quinoa.html
+++ b/recipes/quinoa.html
@@ -8,40 +8,48 @@
 </head>
 <body>
     <header>
-        <h1>Odin Recipes</h1>
+        <h1><img src="../images/title-icon.svg" id="title-icon">Good Dinner Dear</h1>
         <hr>
     </header>
 
-    <h1>Creamy Quinoa</h1>
+    <section class="recipe-block">
+        <h1 class="recipe-heading">Creamy Quinoa</h1>
 
-    <img src="../images/quinoa.png" alt="bowl with creamy quinoa inside" width="400">
+        <img class="recipe-image" src="../images/quinoa.png" alt="bowl with creamy quinoa inside" width="400">
     
     <!-- introduction to the recipe (need to replace with my own text)-->
-    <h2>Description</h2>
-    <p>This creamy quinoa dish is a wholesome, plant-based comfort food made with fluffy quinoa and enriched with nutritional yeast for a savory, cheesy flavor. It’s a satisfying and nutritious meal that’s both dairy-free and packed with protein, perfect as a main or hearty side.</p>
+        <h2 class="recipe-heading">Description</h2>
+        <p>This creamy quinoa dish is a wholesome, plant-based comfort food made with fluffy quinoa and enriched with nutritional yeast for a savory, cheesy flavor. It’s a satisfying and nutritious meal that’s both dairy-free and packed with protein, perfect as a main or hearty side.</p>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 1/4 cup water</li>
-        <li>1/2 cup raw quinoa</li>
-        <li>3 T nutritional yeast or parmesan</li>
-        <li>1/2 t salt</li>
-        <li>1/4 t garlic powder</li>
-        <li>1/4 t onion powder</li>
-        <li>2 T vegan butter</li>
-        <li>1 cup chopped kale or spinach</li>
-        <li>1/2 cup almond milk</li>
-    </ul>
+        <h2 class="recipe-heading">Ingredients</h2>
+        <ul>
+            <li>1 1/4 cup water</li>
+            <li>1/2 cup raw quinoa</li>
+            <li>3 T nutritional yeast or parmesan</li>
+            <li>1/2 t salt</li>
+            <li>1/4 t garlic powder</li>
+            <li>1/4 t onion powder</li>
+            <li>2 T vegan butter</li>
+            <li>1 cup chopped kale or spinach</li>
+            <li>1/2 cup almond milk</li>
+        </ul>
 
-    <h2>Directions</h2>
-    <ol>
-        <li>Combine all ingredients (except for the greens).</li>
-        <li>Bring to a boil an then simmer for about 20 minutes or until all liquid has cooked down.</li>
-        <li>Add greens and then cook for another minute.</li>
-        <li>Enjoy!</li>
-    </ol>
+        <h2 class="recipe-heading">Directions</h2>
+        <ol>
+            <li>Combine all ingredients (except for the greens).</li>
+            <li>Bring to a boil an then simmer for about 20 minutes or until all liquid has cooked down.</li>
+            <li>Add greens and then cook for another minute.</li>
+            <li>Enjoy!</li>
+        </ol>
+    </section>
+
+    <footer>
+        <hr>
+        <!-- link back to home page -->
+         <p>
+            <a href="../index.html">Home</a>
+        </p>
+    </footer>
     
-    <!-- link back to home page -->
-    <a href="../index.html">Home</a>
 </body>
 </html>
